Lanthanum.Web/wwwroot/css/site.css
/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
for details on configuring this project to bundle and minify static web assets. */

a.navbar-brand {
    white-space: normal;
    text-align: center;
    word-break: break-all;
}

/* Provide sufficient contrast against white background */
a {
    color: #0366d6;
}

.btn-primary {
    color: #fff;
    background-color: #1b6ec2;
    border-color: #1861ac;
}

.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
    color: #fff;
    background-color: #1b6ec2;
    border-color: #1861ac;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
    font-size: 14px;
}

@media (min-width: 768px) {
    html {
        font-size: 16px;
    }
}

.border-top {
    border-top: 1px solid #e5e5e5;
}

.border-bottom {
    border-bottom: 1px solid #e5e5e5;
}

.box-shadow {
    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
}

button.accept-policy {
    font-size: 1rem;
    line-height: inherit;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
    position: relative;
    min-height: 100%;
}

body {
    /* Margin bottom by footer height */
    margin-bottom: 60px;
    min-height: 100vh;
}

/* Footer styles start*/
#footer-divider {
    background: #D8D8D8;
    border: 1px solid #B2B2B2;
}
.footer {
    position: absolute;
    bottom: 0;
    white-space: nowrap;
    line-height: 60px; /*Vertically center the text there*/
}

.form-control::placeholder {
    font-size: 0.95rem;
    color: #aaa;
    box-shadow: none;
    outline: none;
}

.form-control.shadow-0:focus {
    box-shadow: none;
    outline: none;
}

.form-control:focus {
    box-shadow: none;
}

.footer-copyright {
    background-color: #D72130;
    color: #FFFBFB;
}

#footer-copyright-logo {
    font-style: normal;
    font-weight: 600;
    font-size: 22px;
    line-height: 28px;
    /* identical to box height, or 127% */


    color: #FFFBFB;


}

.footer-copyright-text {
    font-style: normal;
    font-weight: 600;
    font-size: 12px;
    line-height: 16px;
    /* identical to box height */

    text-align: right;
    color: #FFFBFB;
}

.footer-tab-title {
    font-style: normal;
    font-weight: bold;
    font-size: 16px;
    line-height: 19px;
    /* identical to box height, or 119% */


    color: #000000;
}

.footer-tab-link {
    font-style: normal;
    font-weight: normal;
    font-size: 12px;
    line-height: 16px;
    /* identical to box height */


    color: #7F7B7B;
}

#footer-newsletter-description {
    font-style: normal;
    font-weight: normal;
    font-size: 12px;
    line-height: 16px;
    /* identical to box height */
    /* Text color */

    color: #434C5D;
}

#footer-newsletter-form {
    width: 284px;
    height: 32px;
    box-shadow: none;
    outline: none;
}

#footer-newsletter-email-input {
    border-radius: 0;
    font-style: normal;
    font-weight: 600;
    font-size: 12px;
    line-height: 17px;
    /* identical to box height, or 142% */
    box-shadow: none;
    color: #B2B2B2;
    outline: none;
}

#footer-newsletter-subscribe-button {
    border-radius: 0;
    background: #D72130;
    width: 97px;
    font-style: normal;
    font-weight: 600;
    font-size: 12px;
    line-height: 17px;
    /* identical to box height, or 142% */
    box-shadow: none;
    color: #FFF5F5;
    outline: none;
}

#footer {
    position: absolute;
    width: 100%;
    bottom: 0;
    height: 2.5rem;
}

